@@ -4,6 +4,7 @@ Development Progress	:
 ---------------------------
 
 2010-12-17 (CVS):
+    * libs/timidity/timidity.h.in: Deleted unused file.
     * libs/timidity/instrum_dls.c (LoadRIFF, AllocRegions, AllocInstruments,
       AllocWaveList): Replaced all malloc() usage by safe_malloc().
     * libs/timidity/instrum.c,instrum_dls.c,instrum.h,timidity.c,timidity.h,
